--- a/snapshots/V0/sn65_0.md
+++ b/snapshots/V0/sn65_0.md
@@ -470,11 +470,6 @@
 - 'eq:LaplaceDiff' is associated to 'Laplace-Transformation'
 
 
-- // additional content
-- There is a class 'reelwertige Funktion'
-- 'reelwertige Funktion' is a subclass of 'Funktion'
-- There is a class 'komplexwertige Funktion'
-- 'komplexwertige Funktion' is a subclass of 'Funktion'
 
 - // snippet(53)
 - There is a binary operator 'höhere Zeitableitung'
@@ -649,7 +644,6 @@
 
 - // snippet(61)
 - There is a class: 'Übertragungsfunktion'
-- 'Übertragungsfunktion' is a subclass of 'komplexwertige Funktion'
 - 'Übertragungsfunktion' has the alternative label 'transfer function'
 - 'Übertragungsfunktion' has the associated LaTeX notation  'G(s)'
 - 'Übertragungsfunktion' has the verbal description 'Diesen Ausdruck bezeichnet man als \emph{Übertragungsfunktion} des durch die Dgl.~\eqref{eq:DglAllgemeinLinear} beschriebenen linearen Übertragungsgliedes.'
@@ -709,20 +703,25 @@
             - formalized left hand side: 'H(s)'
             - formalized right hand side: 'G(s)' / 's'
 
-
-- // additional content
-- There is a class: 'Zähler'
-- 'Zähler' has the alternative label 'numerator'
-- There is a relation: 'hat Zähler'
-- The type of argument1 of 'hat Zähler' is 'Funktion'
-- The result type of 'hat Zähler' is 'Zähler'
-
-- There is a class: 'Nenner'
-- 'Nenner' has the alternative label 'denominator'
-- There is a relation: 'hat Nenner'
-- The type of argument1 of 'hat Nenner' is 'Funktion'
-- The result type of 'hat Nenner' is 'Nenner'
-
-
-
-
+- // snippet(65)
+- There is a class: 'charakteristisches Polynom'
+- 'charakteristisches Polynom' has the alternative label 'characteristic polynomial'
+- 'charakteristisches Polynom' has the verbal description 'Den Nenner der Übertragungsfunktion bezeichnet man auch als \emph{charakteristisches Polynom}'
+- 'charakteristisches Polynom' is associated to 'Übertragungsfunktion'
+- // Not sure how to model the relation between 'Nenner' and 'Übertragungsfunktion'. It seems that 'Nenner' is a part of 'Übertragungsfunktion'. However, it is not clear to me how to represent this.
+- There is a class: 'Nullstelle'
+- 'Nullstelle' has the alternative label 'zero'
+- There is a relation: 'hat Nullstelle'
+- 'hat Nullstelle' has the alternative label 'has zero'
+- The type of argument1 of 'hat Nullstelle' is 'Übertragungsfunktion'
+- The result type of 'hat Nullstelle' is 'Nullstelle'
+- 'Nullstelle' has the verbal description 'Die Nullstellen des Zählers von  \(G(s)\) werden als \emph{Nullstellen} der Übertragungsfunktion bezeichnet'
+- // Not sure how to model the relation between 'Zähler' and 'Übertragungsfunktion'. It seems that 'Zähler' is a part of 'Übertragungsfunktion'. However, it is not clear to me how to represent this.
+- There is a class: 'Polstelle'
+- 'Polstelle' has the alternative label 'Pol'
+- 'Polstelle' has the alternative label 'pole'
+- There is a relation: 'hat Polstelle'
+- 'hat Polstelle' has the alternative label 'has pole'
+- The type of argument1 of 'hat Polstelle' is 'Übertragungsfunktion'
+- The result type of 'hat Polstelle' is 'Polstelle'
+- 'Polstelle' has the verbal description 'die Nullstellen des Nenners von  \(G(s)\) (= des charakteristischen Polynoms) als \emph{Polstellen} oder \emph{Pole} der Übertragungsfunktion.'
