--- a/snapshots/V0/sn106_0.md
+++ b/snapshots/V0/sn106_0.md
@@ -161,7 +161,7 @@
 - // snippet(22i)
 - // ignored content
 - // snippet(23)
-- New subsection: 'lineare Übertragungsglieder'
+- New subsection: 'Lineare Übertragungsglieder'
 
 - // snippet(24)
 - New subsection: 'Definition linearer zeitinvarianter Übertragungsglieder'
@@ -232,8 +232,8 @@
 - 'Gewichtsfunktion' is a subclass of 'Funktion'
 - 'Gewichtsfunktion' has the alternative label 'impulse response'
 - 'Gewichtsfunktion' has the verbal description 'Das Übertragungsverhalten linearer Übertragungsglieder lässt sich eindeutig durch die sogenannte \emph{Gewichtsfunktion} charakterisieren.'
-- 'Gewichtsfunktion' is associated to 'lineares Übertragungsglied'
-- // I am not sure how to model the term 'Übertragungsverhalten'. It seems to be a property of 'lineares Übertragungsglied'. However, it is not clear to me what this property represents.
+- 'Gewichtsfunktion' is associated to 'lineare Übertragungsglieder'
+- // I am not sure how to model the term 'Übertragungsverhalten'. It seems to be a property of 'lineare Übertragungsglieder'. However, it is not clear to me what this property represents.
 - // I am not sure how to model the statement that the 'Gewichtsfunktion' characterizes the 'Übertragungsverhalten' uniquely.
 - // I am not sure how to model the statement 'Ist diese bekannt, so lässt sich der Verlauf der Ausgangsgröße aus dem Verlauf der Eingangsgröße berechnen.' It seems to be an if-then statement. However, it is not clear to me what the premise and the assertion are.
 
@@ -315,9 +315,9 @@
 
 
 - // snippet(40)
-- There is class: 'lineares Übertragungsglied'
-- 'lineares Übertragungsglied' is subclass of 'Übertragungsglied'
-- 'lineares Übertragungsglied' has the property 'linear'
+- There is class: 'lineare Übertragungsglieder'
+- 'lineare Übertragungsglieder' is subclass of 'Übertragungsglied'
+- 'lineare Übertragungsglieder' has the property 'linear'
 - There is a general statement:
     - full source code: 'Im Falle von linearen Übertragungsgliedern vereinfacht sich Gl.~\eqref{eq:DlgAllgemein} zu
     \begin{equation} \label{eq:DglAllgemeinLinear}
@@ -350,7 +350,7 @@
     mit den Anfangsbedingungen  \(x_1(0) = V_{00}\),  \(x_2(0)=V_{01}\),  \(\ldots\),  \(x_n(0) =V_{0n-1}\).'
     - formalized setting:
         - '\(n\)' is an instance of 'integer number'
-        - 'lineares Übertragungsglied 1' is an instance of 'lineares Übertragungsglied'
+        - 'lineares Übertragungsglied 1' is an instance of 'lineare Übertragungsglieder'
         - 'lineares Übertragungsglied 1' has system order '\(n\)'
         - // I am not sure how to model the statement 'Mithilfe der Substitution \(x_1 := \nu, x_2 := \dot \nu, \ldots, x_{n} := \nu^{(n-1)}\)'. It seems to introduce a set of variables, but it is not clear to me how to represent this set and how it is related to the other entities.
     - formalized assertion:
@@ -649,7 +649,7 @@
 - 'Übertragungsfunktion' has the alternative label 'transfer function'
 - 'Übertragungsfunktion' has the associated LaTeX notation  'G(s)'
 - 'Übertragungsfunktion' has the verbal description 'Diesen Ausdruck bezeichnet man als \emph{Übertragungsfunktion} des durch die Dgl.~\eqref{eq:DglAllgemeinLinear} beschriebenen linearen Übertragungsgliedes.'
-- 'Übertragungsfunktion' is associated to 'lineares Übertragungsglied'
+- 'Übertragungsfunktion' is associated to 'lineare Übertragungsglieder'
 - There is a relation 'hat Übertragungsfunktion'
 - The type of argument1 of 'hat Übertragungsfunktion' is 'Übertragungsglied'
 - The result type of 'hat Übertragungsfunktion' is 'Übertragungsfunktion'
@@ -939,7 +939,7 @@
 
 - // snippet(76)
 - There is a class: 'lineare zeitinvariante Übertragungsglieder'
-- 'lineare zeitinvariante Übertragungsglieder' is a subclass of 'lineares Übertragungsglied'
+- 'lineare zeitinvariante Übertragungsglieder' is a subclass of 'lineare Übertragungsglieder'
 - 'lineare zeitinvariante Übertragungsglieder' has the property 'zeitinvariant'
 - There is a class: 'Frequenzgang'
 - 'Frequenzgang' has the alternative label 'frequency response'
@@ -1416,8 +1416,7 @@
 - There is an if-then statement:
     - full source code: 'Zeigt die Sprungantwort abklingend-schwingendes Verhalten mit einem stationären Endwert, so gilt für die Pole der Übertragungsfunktion des Übertragungsgliedes folgendes: Es gibt mindestens zwei Pole, alle haben einen negativen Realteil und mindestens ein Polpaar ist konjugiert komplex'
     - formalized setting:
-        - 'system1' is an instance of 'lineares Übertragungsglied'
-        - 'system1' has the property 'zeitinvariant'
+        - 'system1' is an instance of 'Übertragungsglied'
         - 'tf1' is an instance of 'Übertragungsfunktion'
         - 'system1' 'hat Übertragungsfunktion' 'tf1'
         - 'out1' is an instance of 'Sprungantwort'
@@ -1443,68 +1442,3 @@
     - verbal summary: 'In systems with zeros, overshoot can also occur if all poles are purely real and the zeros have a special position relative to the poles.'
     - related to: 'Überschwingweite'
 - // I am unsure how to model 'die Nullstellen eine spezielle Lage zu den Polen haben'. It seems to be a condition, but it is not clear to me how to represent this.
-
-- // snippet(107)
-- There is a class: 'Wendezeit'
-- 'Wendezeit' has the alternative label 'inflection time'
-- 'Wendezeit' has the associated LaTeX notation '\(T_w\)'
-- There is a relation: 'hat Wendezeit'
-- The type of argument1 of 'hat Wendezeit' is 'Sprungantwort'
-- The result type of 'hat Wendezeit' is 'Wendezeit'
-- 'Wendezeit' has the verbal description: 'Die Zeit  \(T_w\), bei der die Ableitung der Sprungantwort ein Maximum hat.'
-- There is a general statement:
-    - formalized setting:
-        - 'sp1' is an instance of 'Sprungantwort'
-        - 't' is an instance of 'real numbers'
-        - 'dsp1' is an instance of 'reellwertige Funktion'
-        - There is an equation:
-            - formalized left hand side: 'dsp1(t)'
-            - formalized right hand side: 'Zeitableitung'('sp1(t)')
-        - 'Tw' is an instance of 'Wendezeit'
-        - 'sp1' 'hat Wendezeit' 'Tw'
-    - formalized assertion:
-        - There is an equation:
-            - formalized left hand side: 'dsp1(Tw)'
-            - formalized right hand side: max('dsp1')
-- 'Anschwingzeit' has the verbal description: 'Die Zeit  \(T_{sr}\), bei der die Sprungantwort zum ersten Male den Wert  \(V_\infty - \Delta \nu_s\) erreicht.'
-- // I am unsure how to model 'zum ersten Male'. It seems to be a condition, but it is not clear to me how to represent this.
-- 'Überschwingweite' has the verbal description: 'Der Wert  \(\nu_m\), um den die Sprungantwort maximal über dem stationären Endwert hinausgeht. Sie wird normiert auf die Differenz zwischen stationären Anfangs- und Endwert angegeben.'
-- // I am unsure how to model 'normiert auf die Differenz zwischen stationären Anfangs- und Endwert'. It seems to be a normalization operation, but it is not clear to me how to represent this.
-- 'Einschwingzeit' has the verbal description: 'Die Zeit  \(T_{s}\), bei der die Sprungantwort bis auf den Wert  \(\Delta \nu_s\) an den stationären Endwert herangekommen ist und von da an im Bereich  \(V_\infty \pm \Delta \nu_s\) verweilt (üblich ist  \(\Delta \nu_s = 2\,\%\) oder  \(\Delta \nu_s = 5\,\%\)).'
-- // I am unsure how to model 'bis auf den Wert  \(\Delta \nu_s\) an den stationären Endwert herangekommen ist' and 'von da an im Bereich  \(V_\infty \pm \Delta \nu_s\) verweilt'. They seem to be conditions, but it is not clear to me how to represent them.
-- // I am unsure how to model '(üblich ist  \(\Delta \nu_s = 2\,\%\) oder  \(\Delta \nu_s = 5\,\%\))'. It seems to be a remark, but it is not clear to me how to represent this.
-
-- // manually added
-- There is a class: 'Wendepunkt'
-- There is a relation: 'hat Wendepunkt'
-- The type of argument1 of 'hat Wendepunkt' is 'Funktion'
-- The result type of 'hat Wendepunkt' is 'Wendepunkt'
-
-
-- // snippet(108)
-- There is a general statement:
-    - full source code: 'Die Sprungantwort dieser Übertragungsglieder beginnt stets mit dem Anstieg Null und hat im weiteren Verlauf (mindestens) einen Wendepunkt.'
-    - formalized setting:
-        - 'system1' is an instance of 'lineares Übertragungsglied'
-        - 'tf1' is an instance of 'Übertragungsfunktion'
-        - 'system1' 'hat Übertragungsfunktion' 'tf1'
-        - 'system1' has system order 2
-        - 'in1' is an instance of 'Sprung'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-        - 'dout1' is instance of 'reellwertige Funktion'
-        - There is an equation:
-            - formalized left hand side: 'dout1'
-            - formalized right hand side: 'Zeitableitung'('out1')
-        - 'ddout1' is instance of 'reellwertige Funktion'
-        - There is an equation:
-            - formalized left hand side: 'ddout1'
-            - formalized right hand side: 'Zeitableitung'('dout1')
-    - formalized assertion:
-        - AND
-            - There is an equation:
-                - formalized left hand side: 'dout1'(0)
-                - formalized right hand side: 0
-            - 'n1' is an instance of 'Nullstelle'
-            - 'ddout1' 'hat Nullstelle' 'n1'
