--- a/snapshots/V0/sn73_0.md
+++ b/snapshots/V0/sn73_0.md
@@ -161,7 +161,7 @@
 - // snippet(22i)
 - // ignored content
 - // snippet(23)
-- New subsection: 'lineare Übertragungsglieder'
+- New subsection: 'Lineare Übertragungsglieder'
 
 - // snippet(24)
 - New subsection: 'Definition linearer zeitinvarianter Übertragungsglieder'
@@ -232,8 +232,8 @@
 - 'Gewichtsfunktion' is a subclass of 'Funktion'
 - 'Gewichtsfunktion' has the alternative label 'impulse response'
 - 'Gewichtsfunktion' has the verbal description 'Das Übertragungsverhalten linearer Übertragungsglieder lässt sich eindeutig durch die sogenannte \emph{Gewichtsfunktion} charakterisieren.'
-- 'Gewichtsfunktion' is associated to 'lineares Übertragungsglied'
-- // I am not sure how to model the term 'Übertragungsverhalten'. It seems to be a property of 'lineares Übertragungsglied'. However, it is not clear to me what this property represents.
+- 'Gewichtsfunktion' is associated to 'lineare Übertragungsglieder'
+- // I am not sure how to model the term 'Übertragungsverhalten'. It seems to be a property of 'lineare Übertragungsglieder'. However, it is not clear to me what this property represents.
 - // I am not sure how to model the statement that the 'Gewichtsfunktion' characterizes the 'Übertragungsverhalten' uniquely.
 - // I am not sure how to model the statement 'Ist diese bekannt, so lässt sich der Verlauf der Ausgangsgröße aus dem Verlauf der Eingangsgröße berechnen.' It seems to be an if-then statement. However, it is not clear to me what the premise and the assertion are.
 
@@ -315,9 +315,6 @@
 
 
 - // snippet(40)
-- There is class: 'lineares Übertragungsglied'
-- 'lineares Übertragungsglied' is subclass of 'Übertragungsglied'
-- 'lineares Übertragungsglied' has the property 'linear'
 - There is a general statement:
     - full source code: 'Im Falle von linearen Übertragungsgliedern vereinfacht sich Gl.~\eqref{eq:DlgAllgemein} zu
     \begin{equation} \label{eq:DglAllgemeinLinear}
@@ -325,6 +322,9 @@
     \end{equation}
     mit  \(a_0, \ldots, a_n, b_0, \ldots b_m \in \mathbb{R}\).'
     - formalized setting:
+        - There is class: 'lineare Übertragungsglieder'
+        - 'lineare Übertragungsglieder' is subclass of 'Übertragungsglied'
+        - 'lineare Übertragungsglieder' has the property 'linear'
         - '\(a_0\)' is an instance of 'real numbers'
 
     - formalized assertion:
@@ -350,7 +350,7 @@
     mit den Anfangsbedingungen  \(x_1(0) = V_{00}\),  \(x_2(0)=V_{01}\),  \(\ldots\),  \(x_n(0) =V_{0n-1}\).'
     - formalized setting:
         - '\(n\)' is an instance of 'integer number'
-        - 'lineares Übertragungsglied 1' is an instance of 'lineares Übertragungsglied'
+        - 'lineares Übertragungsglied 1' is an instance of 'lineare Übertragungsglieder'
         - 'lineares Übertragungsglied 1' has system order '\(n\)'
         - // I am not sure how to model the statement 'Mithilfe der Substitution \(x_1 := \nu, x_2 := \dot \nu, \ldots, x_{n} := \nu^{(n-1)}\)'. It seems to introduce a set of variables, but it is not clear to me how to represent this set and how it is related to the other entities.
     - formalized assertion:
@@ -649,7 +649,7 @@
 - 'Übertragungsfunktion' has the alternative label 'transfer function'
 - 'Übertragungsfunktion' has the associated LaTeX notation  'G(s)'
 - 'Übertragungsfunktion' has the verbal description 'Diesen Ausdruck bezeichnet man als \emph{Übertragungsfunktion} des durch die Dgl.~\eqref{eq:DglAllgemeinLinear} beschriebenen linearen Übertragungsgliedes.'
-- 'Übertragungsfunktion' is associated to 'lineares Übertragungsglied'
+- 'Übertragungsfunktion' is associated to 'lineare Übertragungsglieder'
 - There is a relation 'hat Übertragungsfunktion'
 - The type of argument1 of 'hat Übertragungsfunktion' is 'Übertragungsglied'
 - The result type of 'hat Übertragungsfunktion' is 'Übertragungsfunktion'
@@ -769,9 +769,6 @@
 - There is a property: 'instabil'
 - 'instabil' has the alternative label 'unstable'
 - 'instabil' is applicable to 'Übertragungsglied'
-- There is a property: 'stabil'
-- 'stabil' has the alternative label 'unstable'
-- 'stabil' is applicable to 'Übertragungsglied'
 - There is a general statement:
     - full source code: 'Die Polstellen sind entscheidend für das Stabilitätsverhalten des durch  \(G(s)\) repräsentierten Systems: Ist der Realteil mindestens einer Polstelle größer oder gleich null, so ist das System instabil.'
     - formalized setting:
@@ -902,609 +899,3 @@
 
 - // if you are unsure how to model that a statement is only valid under certain conditions, put those conditions into the setting of the statement
 
-
-- // snippet(74)
-- There is a class: 'Regeldifferenz'
-- 'Regeldifferenz' has the alternative label 'control error'
-- 'Regeldifferenz' has the associated LaTeX notation '\(e(t)\)'
-- There is a class: 'bleibende Regelabweichung'
-- 'bleibende Regelabweichung' has the alternative label 'steady-state error'
-- 'bleibende Regelabweichung' has the associated LaTeX notation '\(e_\infty\)'
-- 'bleibende Regelabweichung' has the verbal description '... der Wert  \(e_\infty\) der Regelabweichung, welcher sich für große  \(t\) einstellt'
-- There is a relation 'hat bleibende Regelabweichung'
-- The type of argument1 of 'hat bleibende Regelabweichung' is 'Übertragungsglied'
-- The result type of 'hat bleibende Regelabweichung' is 'bleibende Regelabweichung'
-- There is a general statement:
-    - full source code: 'Interessiert die bleibende Regelabweichung, also der Wert $e_\infty$ der Regelabweichung, welcher sich für große $t$ einstellt, so kann der Endwertsatz der LAPLACE-Transformation angewandt werden. Für die Bildfunktion $E(s) = \mathcal{L}\{e(t)\}$ der zu untersuchenden Zeitfunktion gilt:'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'system1' has the property 'stabil'
-        - 'e(t)' is an instance of 'Regeldifferenz'
-        - 'E(s)' is an instance of 'Bildfunktion'
-        - 'e(t)' 'hat Bildfunktion' 'E(s)'
-        - 'e_\infty' is an instance of 'bleibende Regelabweichung'
-        - 'system1' 'hat bleibende Regelabweichung' 'e_\infty'
-    - formalized assertion:
-        - There is an equation:
-            - full source code: '\(e_\infty = \lim_{t \to \infty} e(t) = \lim_{s \to 0} s E(s).\)'
-            - source code of left hand side: '\(e_\infty\)'
-            - source code of right hand side: '\(\lim_{s \to 0} s E(s)\)'
-            - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent limits.
-            - reference: 'eq:Endwertsatz'
-- 'eq:Endwertsatz' is associated to 'Endwertsatz'
-
-- // snippet(75)
-- New subsection: 'Frequenzgang'
-- 'Frequenzgang' has the alternative label 'frequency response'
-
-- // snippet(76)
-- There is a class: 'lineare zeitinvariante Übertragungsglieder'
-- 'lineare zeitinvariante Übertragungsglieder' is a subclass of 'lineares Übertragungsglied'
-- 'lineare zeitinvariante Übertragungsglieder' has the property 'zeitinvariant'
-- There is a class: 'Frequenzgang'
-- 'Frequenzgang' has the alternative label 'frequency response'
-- There is a relation: 'hat Frequenzgang'
-- The type of argument1 of 'hat Frequenzgang' is 'lineare zeitinvariante Übertragungsglieder'
-- The result type of 'hat Frequenzgang' is 'Frequenzgang'
-- There is a general statement:
-    - full source code: 'Der Frequenzgang eines linearen zeitinvarianten Übertragungsgliedes mit der Übertragungsfunktion  \(G(s)\) ist die Übertragungsfunktion dieses Gliedes ausgewertet auf der imaginären Achse der komplexen Zahlenebene. Das heißt, man setzt in  \(s = \sigma + j\omega\) den Realteil  \(\sigma = 0\).'
-    - formalized setting:
-        - 'LTÜG' is an instance of 'lineare zeitinvariante Übertragungsglieder'
-        - 'G(s)' is an instance of 'Übertragungsfunktion'
-        - 'LTÜG' 'hat Übertragungsfunktion' 'G(s)'
-        - '\(s\)' is an instance of 'complex numbers'
-        - '\(\sigma\)' is an instance of 'real numbers'
-        - '\(\omega\)' is an instance of 'real numbers'
-        - There is an equation:
-            - formalized left hand side: 's'
-            - formalized right hand side: '\(\sigma\)' + j * '\(\omega\)'
-    - formalized assertion:
-        - There is an equation:
-            - formalized left hand side: '\(\sigma\)'
-            - formalized right hand side: 0
-
-
-- // snippet(77)
-- 'Frequenzgang' has associated latex notation: '\(G(j\omega)\)'
-- // snippet(78i)
-- // ignored content
-- // snippet(79)
-- New section: 'Die Sprungantwort'
-- There is a class: 'Sprungantwort'
-- 'Sprungantwort' is a subclass of 'Ausgangssignal'
-- 'Sprungantwort' has the alternative label 'Sprungantwort'
-- 'Sprungantwort' has the alternative label 'step response'
-
-- // snippet(80)
-- 'Sprungantwort' has the verbal description: 'Der Verlauf der Ausgangsgröße  \(\nu\) eines Systems als Reaktion auf eine sprungförmige Änderung des Eingangs  \(u\) wird \emph{Sprungantwort} genannt.'
-- There is a class: 'Sprung'
-- 'Sprung' has the alternative label 'step'
-- 'Sprung' is a subclass of 'Signal'
-- 'Sprung' has associated latex notation: '\(1/s\)'
-- There is a general statement:
-    - formalized setting:
-        - 'system1' is instance of Übertragungsglied
-        - 'in1' is instance of 'Eingangssignal'
-        - 'out1' is instance of 'Ausgangssignal'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-    - formalized premise:
-        - 'in1' is instance of 'Sprung'
-    - formalized assertion:
-        - 'out1' is instance of 'Sprungantwort'
-
-- // snippet(81)
-- There is a class: 'Gleichgewichtszustand'
-- 'Gleichgewichtszustand' has the alternative label 'Ruhelage'
-- 'Gleichgewichtszustand' has the alternative label 'equilibrium state'
-- There is a general statement:
-    - full source code: 'Dabei wird davon ausgegangen, dass sich das Übertragungsglied zunächst im Gleichgewichtszustand (in einer Ruhelage) befindet, der Ausgang also den konstanten Wert  \(V_0\) und der Eingang den konstanten Wert  \(U_0\) habe. Zum Zeitpunkt  \(t_0\) springt der Eingang dann um  \(U_S\) auf den Wert  \(U_\infty\)'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'system1' has the property 'stabil'
-        - 't' is an instance of 'real numbers'
-        - 't0' is an instance of 'real numbers'
-        - 'V0' is an instance of 'real numbers'
-        - 'U0' is an instance of 'real numbers'
-        - 'Us' is an instance of 'real numbers'
-        - 'U_inf' is an instance of 'real numbers'
-        - 'in1(t)' is an instance of 'Sprung'
-        - 'out1(t)' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1(t)'
-        - 'system1' 'has output signal' 'out1(t)'
-    - formalized premise:
-        - OR
-            - AND
-                - t < 't0'
-                - There is an equation:
-                    - formalized left hand side: in1(t)
-                    - formalized right hand side: 'U0'
-                - There is an equation:
-                    - formalized left hand side: out1(t)
-                    - formalized right hand side: 'V0'
-            - AND
-                - t >= 't0'
-                - There is an equation:
-                    - formalized left hand side: in1(t)
-                    - formalized right hand side: 'U_inf'
-                - There is an equation:
-                    - formalized left hand side: 'in1(t)'
-                    - formalized right hand side: U0 + Us
-
-- // snippet(82i)
-- // ignored content
-- // snippet(83i)
-- // ignored content
-- // snippet(84)
-- There is an explanation:
-    - verbal summary: 'For the choice of the correct parameters of a step response, it is important whether it was recorded on a transfer element (system) alone (Sections \ref{sec:sprung-eines-ubertr} to \ref{sec:pt_2-glied-nicht}) or on the closed control loop (Section \ref{sec:SprungantwortRegelkreis}).'
-    - related to: 'Sprungantwort'
-- // I am not sure how to model the references to the sections. They seem to be related to the choice of parameters for a step response. However, it is not clear to me how to represent this.
-- // I am not sure how to model the distinction between a transfer element alone and a closed control loop. It seems to be related to the context in which the step response is recorded. However, it is not clear to me how to represent this.
-
-- // snippet(85)
-- There is a class: 'Einheitssprungantwort'
-- 'Einheitssprungantwort' has the alternative label 'unit step response'
-- 'Einheitssprungantwort' is a subclass of 'Sprungantwort'
-- There is a general statement:
-    - full source code: 'Auf einen Einheitssprung reagieren lineare zeitinvariante Systeme mit der \emph{Übergangsfunktion} $h$.'
-    - formalized setting:
-        - 'system1' is an instance of 'lineare zeitinvariante Übertragungsglieder'
-        - 'in1' is an instance of 'Einheitssprung'
-        - 'out1' is an instance of 'Einheitssprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-    - formalized assertion:
-        - 'out1' is associated to 'Übergangsfunktion'
-- There is a general statement:
-    - full source code: 'Die Einheitssprungantwort ist ein Spezialfall der allgemeinen Sprungantwort mit $U_0 = 0$, $U_S = 1$, $t_0 = \qty{0}{\second}$ und $V_0 = 0$.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 't' is an instance of 'real numbers'
-        - 'V0' is an instance of 'real numbers'
-        - 'U0' is an instance of 'real numbers'
-        - 'Us' is an instance of 'real numbers'
-        - 'U_inf' is an instance of 'real numbers'
-        - 'in1(t)' is an instance of 'Einheitssprung'
-        - 'out1(t)' is an instance of 'Einheitssprungantwort'
-        - 'system1' 'has input signal' 'in1(t)'
-        - 'system1' 'has output signal' 'out1(t)'
-    - formalized assertion:
-        - AND
-            - There is an equation:
-                - formalized left hand side: 'U0'
-                - formalized right hand side: 0
-            - There is an equation:
-                - formalized left hand side: 'Us'
-                - formalized right hand side: 1
-            - There is an equation:
-                - formalized left hand side: 't0'
-                - formalized right hand side: 0
-            - There is an equation:
-                - formalized left hand side: 'V0'
-                - formalized right hand side: 0
-- // I am unsure how to model the unit of 't0', i.e. 'second'.
-
-- // snippet(86i)
-- // ignored content
-- // snippet(87)
-- New subsection: 'Systemklassifizierung anhand ihrer Sprungantworten'
-
-- // snippet(88)
-- There is a property 'hat stationären Endwert'
-- 'hat stationären Endwert' is applicable to 'Übertragungsglied'
-- There is a class: 'integrierend wirkende Strecke'
-- 'integrierend wirkende Strecke' has the alternative label 'Strecke ohne Ausgleich'
-- 'integrierend wirkende Strecke' has the alternative label 'Integrale Strecke'
-- 'integrierend wirkende Strecke' has the alternative label 'Strecke mit I-Verhalten'
-- 'integrierend wirkende Strecke' has the alternative label 'I-Strecke'
-- 'integrierend wirkende Strecke' is a subclass of 'Übertragungsglied'
-- 'integrierend wirkende Strecke' does not have the property 'hat stationären Endwert'
-- There is a class: 'proportional wirkende Strecke'
-- 'proportional wirkende Strecke' has the alternative label 'Strecke mit Ausgleich'
-- 'proportional wirkende Strecke' has the alternative label 'Proportionalstrecke'
-- 'proportional wirkende Strecke' has the alternative label 'Strecke mit P-Verhalten'
-- 'proportional wirkende Strecke' has the alternative label 'P-Strecke'
-- 'proportional wirkende Strecke' is a subclass of 'Übertragungsglied'
-- 'proportional wirkende Strecke' has the property 'hat stationären Endwert'
-- There is a general statement:
-    - full source code: 'Lineare, zeitinvariante Systeme lassen sich anhand Ihrer Sprungantwort grob in drei Klassen einteilen (vergl.\,auch Abbildung \ref{fig:Streckentypen}):'
-    - formalized setting:
-        - 'system1' is an instance of 'lineare zeitinvariante Übertragungsglieder'
-        - // I cannot model 'anhand Ihrer Sprungantwort'. It seems to be a property of the system, but it is not clear to me how to represent this.
-    - formalized assertion:
-        - OR
-            - 'system1' is an instance of 'integrierend wirkende Strecke'
-            - 'system1' is an instance of 'proportional wirkende Strecke'
-            - 'system1' is an instance of 'allpasshaltige Strecke'
-
-
-- // snippet(89)
-- There is an if-then statement:
-    - full source code: 'Erreicht das Ausgangssignal eines Übertragungsgliedes nach Aufschalten einer sprungförmigen Eingangsgröße keinen stationären Endwert, so wird die durch das Übertragungsglied bezeichnete Strecke als \emph{Strecke ohne Ausgleich} oder \emph{Integrale Strecke} beziehungsweise Strecke mit \emph{I-Verhalten} oder \emph{I-Strecke} bezeichnet.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'in1' is an instance of 'Sprung'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-    - formalized premise:
-        - NOT 'system1' has the property 'hat stationären Endwert'
-    - formalized assertion:
-        - 'system1' is an instance of 'integrierend wirkende Strecke'
-
-
-- // snippet(90)
-- There is an if-then statement:
-    - full source code: 'Wird hingegen ein stationärer Endwert erreicht, so bezeichnet man die Strecke als \emph{Strecke mit Ausgleich} oder \emph{Proportionalstrecke} beziehungsweise Strecke mit \emph{P-Verhalten} oder \emph{P-Strecke}.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'in1' is an instance of 'Sprung'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-    - formalized premise:
-        - 'system1' has the property 'hat stationären Endwert'
-    - formalized assertion:
-        - 'system1' is an instance of 'proportional wirkende Strecke'
-
-- // snippet(91)
-- There is a class: 'allpasshaltige Strecke'
-- There is an if-then statement:
-    - full source code: 'Strecken, bei denen die Sprungantwort zunächst entgegengesetzt der Richtung des Eingangssprunges läuft, dann aber das Vorzeichen wieder wechselt, werden als \emph{allpasshaltige} Strecken bezeichnet.'
-    - formalized setting:
-        - 'strecke1' is an instance of 'Übertragungsglied'
-        - 'in1(t)' is an instance of 'Sprung'
-        - 'out1(t)' is an instance of 'Sprungantwort'
-        - 'strecke1' 'has input signal' 'in1(t)'
-        - 'strecke1' 'has output signal' 'out1(t)'
-        - 't0' is an instance of 'real number'
-        - 't1' is an instance of 'real number'
-    - formalized premise:
-        - // I am unsure how to model 'die Sprungantwort zunächst entgegengesetzt der Richtung des Eingangssprunges läuft, dann aber das Vorzeichen wieder wechselt'. It seems to describe the qualitative behavior of the step response, but it is not clear to me how to represent this.
-        - // TODO: how to model this correctly? OR seems wrong, inequation?
-        - OR
-            - AND
-                - 't0' < t < 't1'
-                - 'int(t)' * 'out1(t)' <0
-            - AND
-                - 't1' < t
-                - 'int(t)' * 'out1(t)' >0
-    - formalized assertion:
-        - 'strecke1' is an instance of 'allpasshaltige Strecke'
-
-- // snippet(92i)
-- // ignored content
-- // snippet(93)
-- 'Eingangssignal' has the alternative label 'input variable'
-- 'Eingangssignal' has the associated LaTeX notation '\(u\)'
-- 'Ausgangssignal' has the alternative label 'output variable'
-- 'Ausgangssignal' has the associated LaTeX notation '\(\nu\)'
-- There is a class: 'Anfangswert der Eingangsgröße'
-- 'Anfangswert der Eingangsgröße' has the alternative label 'initial value of the input variable'
-- 'Anfangswert der Eingangsgröße' has the associated LaTeX notation '\(U_0\)'
-- There is a class: 'Sprunghöhe der Eingangsgröße'
-- 'Sprunghöhe der Eingangsgröße' has the alternative label 'step height of the input variable'
-- 'Sprunghöhe der Eingangsgröße' has the associated LaTeX notation '\(U_S\)'
-- // I am unsure how to model 'Werte der Ausgangsgröße im Beharrungszustand vor und nach dem Sprung'. It seems to be a pair of values. However, it is not clear to me how to represent this.
-- There is a class: 'Überschwingweite'
-- 'Überschwingweite' is a subclass of 'real number'
-- 'Überschwingweite' has the alternative label 'overshoot'
-- 'Überschwingweite' has the associated LaTeX notation '\(\nu_m\)'
-- There is a relation: 'hat Überschwingweite'
-- The type of argument1 of 'hat Überschwingweite' is 'Sprungantwort'.
-- The result type of 'hat Überschwingweite' is 'Überschwingweite'.
-- There is a class: 'Toleranzbereich'
-- 'Toleranzbereich' is a subclass of 'real number'
-- 'Toleranzbereich' has the alternative label 'specified tolerance limit'
-- 'Toleranzbereich' has the associated LaTeX notation '\(2\cdot\Delta\nu_{s}\)'
-- There is a class: 'Totzeit'
-- 'Totzeit' has the alternative label 'dead-time'
-- 'Totzeit' has the associated LaTeX notation '\(T_t\)'
-- There is a relation: 'hat Totzeit'
-- The type of argument1 of 'hat Totzeit' is 'Sprungantwort'.
-- The result type of 'hat Totzeit' is 'Totzeit'.
-- There is a class: 'Anschwingzeit'
-- 'Anschwingzeit' has the alternative label 'step response time'
-- 'Anschwingzeit' has the associated LaTeX notation '\(T_{sr}\)'
-- There is a relation: 'hat Anschwingzeit'
-- The type of argument1 of 'hat Anschwingzeit' is 'Sprungantwort'.
-- The result type of 'hat Anschwingzeit' is 'Anschwingzeit'.
-- There is a class: 'Einschwingzeit'
-- 'Einschwingzeit' has the alternative label 'settling time'
-- 'Einschwingzeit' has the associated LaTeX notation '\(T_s\)'
-- There is a relation: 'hat Einschwingzeit'
-- The type of argument1 of 'hat Einschwingzeit' is 'Sprungantwort'.
-- The result type of 'hat Einschwingzeit' is 'Einschwingzeit'.
-
-- // snippet(94i)
-- // ignored content
-- // snippet(95)
-- New subsection: 'Sprungantwort eines einzelnen Übertragungsglieds'
-- // snippet(96)
-- There is an explanation:
-    - verbal summary: 'Figure \ref{fig:typ_Sprungantwort} shows a typical step response of a stable system with the standardized designations and abbreviations according to DIN IEC 60050-351. There are two different forms to be distinguished:'
-    - related to: 'Sprungantwort'
-- // I am unsure how to model the reference to the figure.
-- There is a property: 'schwingungsfähig'
-- 'schwingungsfähig' has the alternative label 'oscillatory'
-- 'schwingungsfähig' is applicable to 'Übertragungsglied'
-- There is a property: 'nicht schwingungsfähig'
-- 'nicht schwingungsfähig' has the alternative label 'non-oscillatory'
-- 'nicht schwingungsfähig' is applicable to 'Übertragungsglied'
-- There is an if-then statement:
-    - full source code: 'Es kommt zu einem Überschwingen der Ausgangsgröße, danach pendelt sich der stationäre Endwert langsam ein. Es handelt sich um ein sogenanntes \emph{schwingungsfähiges} System.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'system1' has the property 'stabil'
-        - 'in1' is an instance of 'Sprung'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-        - 'uw1' is instance of 'Überschwingweite'
-        - 'out1' 'hat Überschwingweite' 'uw1'
-    - formalized premise:
-        - There is a mathematical relation:
-            - relation sign: >
-            - formalized left hand side: 'uw1'
-            - formalized right hand side: 0
-    - formalized assertion:
-        - 'system1' has the property 'schwingungsfähig'
-- There is an if-then statement:
-    - full source code: 'Die Ausgangsgröße nähert sich asymptotisch dem stationären Endwert an, ohne diesen jemals zu überschreiten (bzw.\,zu unterschreiten bei Reaktionen in negative Richtung). Es handelt sich um ein \emph{nicht schwingungsfähiges} System.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'system1' has the property 'stabil'
-        - 'in1' is an instance of 'Sprung'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-        - 'uw1' is instance of 'Überschwingweite'
-        - 'out1' 'hat Überschwingweite' 'uw1'
-    - formalized premise:
-        - There is an equation:
-            - formalized left hand side: 'uw1'
-            - formalized right hand side: 0
-    - formalized assertion:
-        - 'system1' has the property 'nicht schwingungsfähig'
-
-
-- // manually added
-- There is an operator: 'komplexe Konjugation'
-- The type of argument1 of 'komplexe Konjugation' is 'complex number'.
-- The result type of 'komplexe Konjugation' is 'complex number'.
-
-- // snippet(97)
-- There is a general statement:
-    - full source code: 'Systeme erster Ordnung sind nie schwingungsfähig.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'system1' has system order 1
-    - formalized assertion:
-        - 'system1' does not have the property 'schwingungsfähig'
-- // I am unsure how to model 'Polpaar der Übertragungsfunktion konjugiert komplex'. It seems to be a property of the poles of the transfer function, but it is not clear to me how to represent this.
-- There is a general statement:
-    - full source code: 'Systeme zweiter Ordnung und höher sind schwingungsfähig, wenn mindestens ein Polpaar der Übertragungsfunktion konjugiert komplex ist.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'tf1' is instance of 'Übertragungsfunktion'
-        - 'system1' 'hat Übertragungsfunktion' 'tf1'
-        - 'n' is an instance of 'integer number'
-        - 'n' >= 2
-        - 'system1' has system order 'n'
-        - 'p1' is instance of 'complex number'
-        - 'tf1' 'hat Polstelle' 'p1'
-        - 'p2' is instance of 'complex number'
-        - 'tf1' 'hat Polstelle' 'p2'
-    - formalized premise:
-        - There is an equation:
-            - formalized left hand side: 'p2'
-            - formalized right hand side: 'komplexe Konjugation'('p1')
-    - formalized assertion:
-        - 'system1' has the property 'schwingungsfähig'
-
-
-- // snippet(98)
-- There is an explanation:
-    - verbal summary: 'Furthermore, a distinction must be made according to the type of rise of the step response at the time of the input step:'
-    - related to: 'Sprungantwort'
-- There is an if-then statement:
-    - full source code: 'Bei einem System mit Polüberschuss 1 ist der Anstieg zu Beginn ungleich 0, vergl.~Abbildung \ref{fig:ermittlung_zeitkonstante}.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'tf1' is an instance of 'Übertragungsfunktion'
-        - 'system1' 'hat Übertragungsfunktion' 'tf1'
-        - 'in1' is an instance of 'Sprung'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-        - 'dout1' is instance of 'reellwertige Funktion'
-        - There is an equation:
-            - formalized left hand side: 'dout1'
-            - formalized right hand side: 'Zeitableitung'('out1')
-    - formalized premise:
-        - 'tf1' 'hat relativen Grad' 1
-    - formalized assertion:
-        - There is a mathematical relation:
-            - relation sign: !=
-            - formalized left hand side: 'dout1'(0)
-            - formalized right hand side: 0
-- There is an if-then statement:
-    - full source code: 'Bei Systemen mit einem Polüberschuss von 2 und größer ist der Anstieg zu Beginn gleich null. Sie beginnen also deutlich \glqq langsamer\grqq~mit dem Anstieg, vergl.~Abbildung \ref{fig:ermittlung_verzugszeit}.'
-    - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
-        - 'tf1' is an instance of 'Übertragungsfunktion'
-        - 'system1' 'hat Übertragungsfunktion' 'tf1'
-        - 'n' is an instance of 'integer number'
-        - 'tf1' 'hat relativen Grad' 'n'
-        - 'in1' is an instance of 'Sprung'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-    - formalized premise:
-        - There is a mathematical relation:
-            - relation sign: >=
-            - formalized left hand side: 'n'
-            - formalized right hand side: 2
-    - formalized assertion:
-        - There is an equation:
-            - formalized left hand side: 'dout1'(0)
-            - formalized right hand side: 0
-
-- // snippet(99i)
-- // ignored content
-- // snippet(100i)
-- // ignored content
-- // snippet(101)
-- New subsection: 'Sprungantwort von proportional wirkenden Strecken erster Ordnung'
-
-
-- // snippet(102)
-- There is a class: 'Verzögerungszeit'
-- 'Verzögerungszeit' has the alternative label 'Zeitkonstante'
-- 'Verzögerungszeit' has the alternative label 'time constant'
-- 'Verzögerungszeit' has the associated LaTeX notation '\(\tau\)'
-- There is a relation: 'hat Verzögerungszeit'
-- The type of argument1 of 'hat Verzögerungszeit' is 'Sprungantwort'
-- The result type of 'hat Verzögerungszeit' is 'Verzögerungszeit'
-- There is a class: 'stationäre Verstärkung'
-- 'stationäre Verstärkung' has the associated LaTeX notation '\((V_\infty - V_0)/U_S\)'
-- There is a relation: 'hat stationäre Verstärkung'
-- The type of argument1 of 'hat stationäre Verstärkung' is 'Sprungantwort'
-- The result type of 'hat stationäre Verstärkung' is 'stationäre Verstärkung'
-
-
-- // snippet(103)
-- There is an explanation:
-    - verbal summary: 'It can be determined in three different ways:'
-    - related to: 'Verzögerungszeit'
-- There is an explanation:
-    - verbal summary: 'A tangent is drawn at any point of the step response. The point of contact of this tangent and the intersection with the parallel to the time axis passing through the steady-state final value are projected onto the time axis. The difference between the resulting time points is the time constant. It is best to draw the tangent at the beginning of the step response at  \(t_0\).'
-    - related to: 'Verzögerungszeit'
-- There is an explanation:
-    - verbal summary: 'The time after which the step response has reached 63.2\,\% of the steady-state output change  \((V_\infty - V_0)\) is the time constant  \(\tau\). The number 63.2\,\% corresponds to the  \(1-\mathrm{e}^{-1}\) times the steady-state output change.'
-    - related to: 'Verzögerungszeit'
-- There is an explanation:
-    - verbal summary: 'The time constant results from the area bounded by the graph of the step response normalized to the steady-state final value, the line running parallel to the  \(t\) -axis through the steady-state final value, and the  \(y\) -axis:'
-    - related to: 'Verzögerungszeit'
-    - There is an equation:
-        - full source code: '\(\tau = \int_0^\infty(1-h(\tau)/h(\infty))\text{d}\tau\)'
-        - source code of left hand side: '\(\tau\)'
-        - source code of right hand side: '\(\int_0^\infty(1-h(\tau)/h(\infty))\text{d}\tau\)'
-
-
-- // snippet(104)
-- New subsection: 'Sprungantwort von schwingungsfähigen, proportional wirkenden Strecken zweiter Ordnung'
-
-- //manually added
-- There is a class: 'set of poles'
-- 'set of poles' is a subclass of 'set'
-- There is a relation: 'has set of poles'
-- The type of argument1 of 'has set of poles' is 'Übertragungsfunktion'
-- The result type of 'has set of poles' is 'set of poles'
-
-- There is a relation: 'is subset of'
-- The type of argument1 of 'is subset of' is 'set'
-- The result type of 'is subset of' is 'set'
-
-- There is a class: 'open left half plane'
-- 'open left half plane' is a subclass of 'set'
-
-
-
-- // snippet(105)
-- There is an if-then statement:
-    - full source code: 'Zeigt die Sprungantwort abklingend-schwingendes Verhalten mit einem stationären Endwert, so gilt für die Pole der Übertragungsfunktion des Übertragungsgliedes folgendes: Es gibt mindestens zwei Pole, alle haben einen negativen Realteil und mindestens ein Polpaar ist konjugiert komplex'
-    - formalized setting:
-        - 'system1' is an instance of 'lineares Übertragungsglied'
-        - 'system1' has the property 'zeitinvariant'
-        - 'tf1' is an instance of 'Übertragungsfunktion'
-        - 'system1' 'hat Übertragungsfunktion' 'tf1'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has output signal' 'out1'
-        - 'p1' is instance of 'complex number'
-        - 'tf1' 'hat Polstelle' 'p1'
-        - 'p2' is instance of 'complex number'
-        - 'tf1' 'hat Polstelle' 'p2'
-        - 'sop1' is an instance of 'set of poles'
-        - 'tf1' 'has set of poles' 'sop1'
-    - formalized premise:
-        - 'system1' has the property 'hat stationären Endwert'
-        - 'system1' has the property 'schwingungsfähig'
-    - formalized assertion:
-        - AND
-            - There is an equation:
-                - formalized left hand side: 'p2'
-                - formalized right hand side: 'komplexe Konjugation'('p1')
-            - 'sop1' 'is subset of' 'open left half plane'
-
-- // snippet(106)
-- There is an explanation:
-    - verbal summary: 'In systems with zeros, overshoot can also occur if all poles are purely real and the zeros have a special position relative to the poles.'
-    - related to: 'Überschwingweite'
-- // I am unsure how to model 'die Nullstellen eine spezielle Lage zu den Polen haben'. It seems to be a condition, but it is not clear to me how to represent this.
-
-- // snippet(107)
-- There is a class: 'Wendezeit'
-- 'Wendezeit' has the alternative label 'inflection time'
-- 'Wendezeit' has the associated LaTeX notation '\(T_w\)'
-- There is a relation: 'hat Wendezeit'
-- The type of argument1 of 'hat Wendezeit' is 'Sprungantwort'
-- The result type of 'hat Wendezeit' is 'Wendezeit'
-- 'Wendezeit' has the verbal description: 'Die Zeit  \(T_w\), bei der die Ableitung der Sprungantwort ein Maximum hat.'
-- There is a general statement:
-    - formalized setting:
-        - 'sp1' is an instance of 'Sprungantwort'
-        - 't' is an instance of 'real numbers'
-        - 'dsp1' is an instance of 'reellwertige Funktion'
-        - There is an equation:
-            - formalized left hand side: 'dsp1(t)'
-            - formalized right hand side: 'Zeitableitung'('sp1(t)')
-        - 'Tw' is an instance of 'Wendezeit'
-        - 'sp1' 'hat Wendezeit' 'Tw'
-    - formalized assertion:
-        - There is an equation:
-            - formalized left hand side: 'dsp1(Tw)'
-            - formalized right hand side: max('dsp1')
-- 'Anschwingzeit' has the verbal description: 'Die Zeit  \(T_{sr}\), bei der die Sprungantwort zum ersten Male den Wert  \(V_\infty - \Delta \nu_s\) erreicht.'
-- // I am unsure how to model 'zum ersten Male'. It seems to be a condition, but it is not clear to me how to represent this.
-- 'Überschwingweite' has the verbal description: 'Der Wert  \(\nu_m\), um den die Sprungantwort maximal über dem stationären Endwert hinausgeht. Sie wird normiert auf die Differenz zwischen stationären Anfangs- und Endwert angegeben.'
-- // I am unsure how to model 'normiert auf die Differenz zwischen stationären Anfangs- und Endwert'. It seems to be a normalization operation, but it is not clear to me how to represent this.
-- 'Einschwingzeit' has the verbal description: 'Die Zeit  \(T_{s}\), bei der die Sprungantwort bis auf den Wert  \(\Delta \nu_s\) an den stationären Endwert herangekommen ist und von da an im Bereich  \(V_\infty \pm \Delta \nu_s\) verweilt (üblich ist  \(\Delta \nu_s = 2\,\%\) oder  \(\Delta \nu_s = 5\,\%\)).'
-- // I am unsure how to model 'bis auf den Wert  \(\Delta \nu_s\) an den stationären Endwert herangekommen ist' and 'von da an im Bereich  \(V_\infty \pm \Delta \nu_s\) verweilt'. They seem to be conditions, but it is not clear to me how to represent them.
-- // I am unsure how to model '(üblich ist  \(\Delta \nu_s = 2\,\%\) oder  \(\Delta \nu_s = 5\,\%\))'. It seems to be a remark, but it is not clear to me how to represent this.
-
-- // manually added
-- There is a class: 'Wendepunkt'
-- There is a relation: 'hat Wendepunkt'
-- The type of argument1 of 'hat Wendepunkt' is 'Funktion'
-- The result type of 'hat Wendepunkt' is 'Wendepunkt'
-
-
-- // snippet(108)
-- There is a general statement:
-    - full source code: 'Die Sprungantwort dieser Übertragungsglieder beginnt stets mit dem Anstieg Null und hat im weiteren Verlauf (mindestens) einen Wendepunkt.'
-    - formalized setting:
-        - 'system1' is an instance of 'lineares Übertragungsglied'
-        - 'tf1' is an instance of 'Übertragungsfunktion'
-        - 'system1' 'hat Übertragungsfunktion' 'tf1'
-        - 'system1' has system order 2
-        - 'in1' is an instance of 'Sprung'
-        - 'out1' is an instance of 'Sprungantwort'
-        - 'system1' 'has input signal' 'in1'
-        - 'system1' 'has output signal' 'out1'
-        - 'dout1' is instance of 'reellwertige Funktion'
-        - There is an equation:
-            - formalized left hand side: 'dout1'
-            - formalized right hand side: 'Zeitableitung'('out1')
-        - 'ddout1' is instance of 'reellwertige Funktion'
-        - There is an equation:
-            - formalized left hand side: 'ddout1'
-            - formalized right hand side: 'Zeitableitung'('dout1')
-    - formalized assertion:
-        - AND
-            - There is an equation:
-                - formalized left hand side: 'dout1'(0)
-                - formalized right hand side: 0
-            - 'n1' is an instance of 'Nullstelle'
-            - 'ddout1' 'hat Nullstelle' 'n1'
