add test for render rings

--- a/snapshots/V0/sn108_0.md
+++ b/snapshots/V0/sn108_0.md
@@ -1474,15 +1474,21 @@
 - // I am unsure how to model 'bis auf den Wert  \(\Delta \nu_s\) an den stationären Endwert herangekommen ist' and 'von da an im Bereich  \(V_\infty \pm \Delta \nu_s\) verweilt'. They seem to be conditions, but it is not clear to me how to represent them.
 - // I am unsure how to model '(üblich ist  \(\Delta \nu_s = 2\,\%\) oder  \(\Delta \nu_s = 5\,\%\))'. It seems to be a remark, but it is not clear to me how to represent this.
 
+- // manually added
+- There is a class: 'Wendepunkt'
+- There is a relation: 'hat Wendepunkt'
+- The type of argument1 of 'hat Wendepunkt' is 'Funktion'
+- The result type of 'hat Wendepunkt' is 'Wendepunkt'
+
+
 - // snippet(108)
 - There is a general statement:
     - full source code: 'Die Sprungantwort dieser Übertragungsglieder beginnt stets mit dem Anstieg Null und hat im weiteren Verlauf (mindestens) einen Wendepunkt.'
     - formalized setting:
-        - 'system1' is an instance of 'Übertragungsglied'
+        - 'system1' is an instance of 'lineares Übertragungsglied'
         - 'tf1' is an instance of 'Übertragungsfunktion'
         - 'system1' 'hat Übertragungsfunktion' 'tf1'
-        - 'n' is an instance of 'integer number'
-        - 'tf1' 'hat relativen Grad' 'n'
+        - 'system1' has system order 2
         - 'in1' is an instance of 'Sprung'
         - 'out1' is an instance of 'Sprungantwort'
         - 'system1' 'has input signal' 'in1'
@@ -1491,10 +1497,14 @@
         - There is an equation:
             - formalized left hand side: 'dout1'
             - formalized right hand side: 'Zeitableitung'('out1')
+        - 'ddout1' is instance of 'reellwertige Funktion'
+        - There is an equation:
+            - formalized left hand side: 'ddout1'
+            - formalized right hand side: 'Zeitableitung'('dout1')
     - formalized assertion:
         - AND
             - There is an equation:
                 - formalized left hand side: 'dout1'(0)
                 - formalized right hand side: 0
-            - // I am unsure how to model 'hat im weiteren Verlauf (mindestens) einen Wendepunkt'. It seems to be a property of the step response, but it is not clear to me how to represent this. It also seems to be related to the concept of 'Wendezeit' introduced in snippet 107.
-            - 'out1' 'hat Wendezeit'
+            - 'n1' is an instance of 'Nullstelle'
+            - 'ddout1' 'hat Nullstelle' 'n1'
