solution for \dots problem

--- a/data/V0/V0_all.tex
+++ b/data/V0/V0_all.tex
@@ -594,8 +594,8 @@ Die Abbildungen \ref{fig:typ_Sprungantwort_Regelkreis} und \ref{fig:typ_Sprungan
 \FloatBarrier
 \snippet{119}
 
-% % Bodediagramm
-% \section{Bode-Diagramm}
+% Bodediagramm
+\section{Bode-Diagramm}
 % \label{sec:das-bodediagramm}
 
 % \begin{RstHinweisBox}
@@ -603,13 +603,14 @@ Die Abbildungen \ref{fig:typ_Sprungantwort_Regelkreis} und \ref{fig:typ_Sprungan
 % \end{RstHinweisBox}
 
 
-
-% \subsection{Grundlagen des Bodediagramms} \label{sec:grundlagen:bode}
-% Im Bode-Diagramm (auch: Frequenzkennliniendiagramm) werden \emph{Betrag} $|G(j \omega)|$ und \emph{Phase} $\text{arg}(G(j\omega))$ des Frequenzgangs eines Übertragungsgliedes mit der Übertragungsfunktion $G(s)$ in Abhängigkeit von der Kreisfrequenz $\omega$ dargestellt. Dabei sind folgende Bezeichnungen üblich:
-% \begin{itemize}
-%     \item $|G(j \omega)|$: Amplitudengang, Amplitudenkennlinie, Amplituden(dichte)spektrum
-%     \item $\text{arg}(G(j\omega))$: Phasengang, Phasenkennlinie, Phasen(dichte)spektrum
-% \end{itemize}
+\snippet{120}
+\subsection{Grundlagen des Bodediagramms} \label{sec:grundlagen:bode}
+\snippet{121}
+Im Bode-Diagramm (auch: Frequenzkennliniendiagramm) werden \emph{Betrag} $|G(j \omega)|$ und \emph{Phase} $\text{arg}(G(j\omega))$ des Frequenzgangs eines Übertragungsgliedes mit der Übertragungsfunktion $G(s)$ in Abhängigkeit von der Kreisfrequenz $\omega$ dargestellt. Dabei sind folgende Bezeichnungen üblich:
+\begin{itemize}
+    \item $|G(j \omega)|$: Amplitudengang, Amplitudenkennlinie, Amplituden(dichte)spektrum
+    \item $\text{arg}(G(j\omega))$: Phasengang, Phasenkennlinie, Phasen(dichte)spektrum
+\end{itemize}
 
 % Da der Amplitudengang betragsmäßig häufig große Wertebereiche über einem großen Frequenzintervall abdeckt, wird er im Bodediagramm grafisch wie folgt dargestellt: Auf der Abszisse wird die Kreisfrequenz $\omega$ mit dekadisch logarithmischer Skala aufgetragen. Die Ordinate wird linear geteilt und auf ihr der Amplitudengang $|G(j\omega)|_{\text{dB}}$ in Dezibel (dB) aufgetragen. Dabei gilt:
 % \begin{equation} \label{eq:Dezibel}
